src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Alpha2Code__c</fullName>
        <label>Alpha2Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha3Code__c</fullName>
        <label>Alpha3Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital__c</fullName>
        <label>Capital</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalBlocs__c</fullName>
        <label>RegionalBlocs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>